--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*STARTER CODE*/
+*STARTER CODE*/
 
 /*
 We have started some of the selectors for you.
@@ -14,9 +14,9 @@ body{
   margin: 1.2em;
   font-family: Andika, sans-serif;
   background-size: cover ;
-  background-position: center;
   background-image: url("../images/pigeon-background.JPEG");
   background-color: #DDDDDD;
+  background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   }
